fix contact animation and project section buttons

--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
         <div class="container">
             <h1 id="titleprojects" class="text-center my-4">My projects</h1>
             <div class="cta filter text-center mt-4 mb-3">
-                <a class="all active btn btn-outline-info" data-filter="all" href="#" role="button">Show All</a>
-                <a class="btn btn-outline-info" data-filter="personal" href="#" role="button">Personal</a>
-                <a class="btn btn-outline-info" data-filter="school" href="#" role="button">School</a>
-                <a class="btn btn-outline-info" data-filter="others" href="#" role="button">Others</a>
+                <a class="all active btn btn-outline-primary" data-filter="all" href="#" role="button">Show All</a>
+                <a class="btn btn-outline-primary" data-filter="personal" href="#" role="button">Personal</a>
+                <a class="btn btn-outline-primary" data-filter="school" href="#" role="button">School</a>
+                <a class="btn btn-outline-primary" data-filter="others" href="#" role="button">Others</a>
             </div>
 
             <div class="boxes">
@@ -249,7 +249,7 @@
                         </div>
                     </div>
 
-                    <div class="row mb-3" data-aos="fade-left">
+                    <div class="row mb-5" data-aos="fade-left">
                         <div class="col-md-3 col-sm-6 col-xs-6 mb-3">
                             <div class="single-content" data-category="school">
                                 <img src="stylesheets/art1.jpg" alt="">
@@ -312,7 +312,7 @@
                     <h4 class="contactme mt-5">Want to get in touch? Here's how you can reach me...</h4>
                 </div>
             </div>
-            <div class="row" data-aos="fade">
+            <div class="row" data-aos="fade" data-aos-offset="80">
                 <div class="col-md-12">
                     <div class="middle">
                         <a class="contactbtn" id="fb" href="https://www.facebook.com/nishita.acharya/" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -330,10 +330,6 @@
             </div>
         </section>
     </section>
-
-
-
-
 
     <script>
         $('#gmail').on('click', function() {
