add info for some projects

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <span class="progress-title">HTML5/CSS</span>
                             </h4>
                             <div class="progress-content-outter">
-                                <div class="progress-content">95%</div>
+                                <div class="progress-content"></div>
                             </div>
                         </div>
 
@@ -111,7 +111,7 @@
                                 <span class="progress-title">Javascript</span>
                             </h4>
                             <div class="progress-content-outter">
-                                <div class="progress-content">75%</div>
+                                <div class="progress-content"></div>
                             </div>
                         </div>
 
@@ -121,7 +121,7 @@
                                 <span class="progress-title">Java</span>
                             </h4>
                             <div class="progress-content-outter">
-                                <div class="progress-content">90%</div>
+                                <div class="progress-content"></div>
                             </div>
                         </div>
 
@@ -131,7 +131,7 @@
                                 <span class="progress-title">PHP</span>
                             </h4>
                             <div class="progress-content-outter">
-                                <div class="progress-content">60%</div>
+                                <div class="progress-content"></div>
                             </div>
                         </div>
 
@@ -141,7 +141,7 @@
                                 <span class="progress-title">NodeJS</span>
                             </h4>
                             <div class="progress-content-outter">
-                                <div class="progress-content">90%</div>
+                                <div class="progress-content"></div>
                             </div>
                         </div>
 
@@ -151,7 +151,7 @@
                                 <span class="progress-title">SQL</span>
                             </h4>
                             <div class="progress-content-outter">
-                                <div class="progress-content">80%</div>
+                                <div class="progress-content"></div>
                             </div>
                         </div>
 
@@ -161,7 +161,7 @@
                                 <span class="progress-title">MongoDB</span>
                             </h4>
                             <div class="progress-content-outter">
-                                <div class="progress-content">85%</div>
+                                <div class="progress-content"></div>
                             </div>
                         </div>
 
@@ -171,7 +171,7 @@
                                 <span class="progress-title">Express</span>
                             </h4>
                             <div class="progress-content-outter">
-                                <div class="progress-content">85%</div>
+                                <div class="progress-content"></div>
                             </div>
                         </div>
                         <button id="resume" class="btn btn-info float-right">Resume</button>
@@ -200,21 +200,21 @@
 
                 <div class="projectscontainer">
                     <div class="row mb-3" data-aos="fade-right">
-                        <div class="col-md-3 col-sm-6 col-xs-6 mb-3">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mb-3">
                             <div class="single-content" data-category="personal">
                                 <img src="stylesheets/yelpcamp1.jpg" alt="">
                                 <h3 class="title">YelpCamp</h3>
                                 <div class="img-text">
                                     <!-- <h2>YelpCamp</h2> -->
-                                    <p>YelpCamp is a website where users can create and review campgrounds using an account. <br><strong style="text-decoration: underline;">Created with:</strong> VanillaJS, MongoDB, NodeJS, Express, Bootstrap, PassportJS
-                                        and more.
+                                    <p>YelpCamp is a full-stack website where users can create and review campgrounds using an account. <br><strong style="text-decoration: underline;">Created with:</strong> VanillaJS, MongoDB, NodeJS, Express, Bootstrap,
+                                        PassportJS and more.
                                     </p>
                                     <a id="btn-xs" class="btn btn-outline-primary" href="http://nishita-yelpcamp.herokuapp.com/" target="_blank">Demo</a>
                                     <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/yelpcamp" target="_blank">Github</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-6  mb-3">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
                             <div class="single-content" data-category="personal">
                                 <img src="stylesheets/colours.jpg" alt="">
                                 <h3 class="title">Guess the Colour</h3>
@@ -226,57 +226,63 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-6  mb-3">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
                             <div class="single-content" data-category="personal">
                                 <img src="stylesheets/circles.jpg" alt="">
-                                <h3 class="title">Padatap Clone</h3>
+                                <h3 class="title">Patatap Clone</h3>
                                 <div class="img-text">
-                                    <h2>Project three</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, molestiae? Id rerum, iusto explicabo voluptate maiores incidunt ipsum saepe praesentium libero! Doloribus inventore optio .</p>
+                                    <!-- <h2>Project three</h2> -->
+                                    <p>This project is a browser sound player which is a clone of Patatap website. Hit any key, A to Z, and a sound plays with an animation.<br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS, JavaScript
+                                        (Paper.js, Howler.js)</p>
+                                    <a id="btn-xs" class="btn btn-outline-primary" href="https://nishitaaa.github.io/patatap-clone/" target="_blank">Demo</a>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/patatap-clone" target="_blank">Github</a>
+
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-md-3 col-sm-6 col-xs-6">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6">
                             <div class="single-content" data-category="personal">
                                 <img src="stylesheets/todo.jpg" alt="">
                                 <h3 class="title">To-do List</h3>
                                 <div class="img-text">
-                                    <h2>Project three</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, molestiae? Id rerum, iusto explicabo voluptate maiores incidunt ipsum saepe praesentium libero! Doloribus inventore optio .</p>
+                                    <!-- <h2>Project three</h2> -->
+                                    <p>A simple to-do list application. A user can add, delete and check/uncheck an item.<br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS, jQuery.</p>
+                                    <a id="btn-xs" class="btn btn-outline-primary" href="https://nishitaaa.github.io/todo-list/" target="_blank">Demo</a>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/todo-list" target="_blank">Github</a>
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="row mb-5" data-aos="fade-left">
-                        <div class="col-md-3 col-sm-6 col-xs-6 mb-3">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mb-3">
                             <div class="single-content" data-category="school">
                                 <img src="stylesheets/art1.jpg" alt="">
                                 <h3 class="title">Art Gallery</h3>
                                 <div class="img-text">
                                     <h2>Project one</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, molestiae? Id rerum, iusto explicabo voluptate maiores incidunt ipsum saepe praesentium libero! Doloribus inventore optio .</p>
-                                    <a id="btn-xs" class="btn btn-outline-primary" href="#" target="_blank">Demo</a>
-                                    <a id="btn-xs" class="btn btn-outline-light" href="#" target="_blank">Github</a>
+                                    <p>A simple to-do list application. A user can add, delete and check/uncheck an item.<br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS, jQuery.</p>
+                                    <a id="btn-xs" class="btn btn-outline-primary" href="https://www.cs.ryerson.ca/~pnkapadi/cps630/assign2/a2.html" target="_blank">Demo</a>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="#projects" target="_blank">Github</a>
 
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-6  mb-3">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
                             <div class="single-content" data-category="school">
-                                <img src="stylesheets/weather1.jpg" alt="">
+                                <img src="stylesheets/weather.jpg" alt="">
                                 <h3 class="title">Angular Basics</h3>
                                 <div class="img-text">
-                                    <h2>Project Two</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, molestiae? Id rerum, iusto explicabo voluptate maiores incidunt ipsum saepe praesentium libero! Doloribus inventore optio .</p>
+                                    <!-- <h2>Project Two</h2> -->
+                                    <p> A prototype with a given list of features using Angular v.9. User can see current time and date and real-time weather once authenicated. <br><strong style="text-decoration: underline;">Created with:</strong> Angular,
+                                        Firebase, Travis CI, Javascript, and more.</p>
                                     <a id="btn-xs" class="btn btn-outline-primary" href="https://cps847-finalproject.firebaseapp.com/" target="_blank">Demo</a>
-                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/thomas-brunton/CPS847-Assignment" target="_blank">Github</a>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/CPS847-GroupProject" target="_blank">Github</a>
 
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6 col-xs-6  mb-3">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
                             <div class="single-content" data-category="school">
                                 <img src="stylesheets/connections1.jpg" alt="">
                                 <h3 class="title">Content Delivery Network</h3>
@@ -287,7 +293,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 col-sm-6 col-xs-6 mb-3">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mb-3">
                             <div class="single-content" data-category="others">
                                 <img src="stylesheets/code2.jpeg" alt="">
                                 <h3 class="title">WICS Web Developer</h3>
