add learn more in home section and footer

--- a/index.html
+++ b/index.html
@@ -50,19 +50,22 @@
                     <h1 class=" welcome ">Welcome! I am Nishita Acharya.</h1>
                     <h1 class="mytitle ">I am a Web Developer</h1>
                 </div>
-            </div>
-            <div class="fadingout">
-                <!-- <div class="scrollanim"> -->
-                <div class="scrollicon">
-                    <a href="#about">
-                        <div class="mouse">
-                            <div class="wheel"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- </div> -->
-            </div>
 
+
+
+                <div class="fadingout">
+                    <p class="text-center">Scroll down to learn more</p>
+                    <!-- <div class="scrollanim"> -->
+                    <div class="scrollicon">
+                        <a href="#about">
+                            <div class="mouse">
+                                <div class="wheel"></div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- </div> -->
+                </div>
+            </div>
             </div>
 
             <!-- </div> -->
@@ -254,7 +257,7 @@
                         </div>
                     </div>
 
-                    <div class="row mb-5" data-aos="fade-left">
+                    <div class="row mb-5" data-aos="fade-left" data-aos-offset="20">
                         <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mb-3">
                             <div class="single-content" data-category="school">
                                 <img src="stylesheets/art1.jpg" alt="">
@@ -330,9 +333,12 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-12">
-                    <h5 id="myemail">Email me at <a href="mailto:">
+                    <h5 id="myemail">Email me at <a href="mailto:acharyanishita@gmail.com">
                         acharyanishita@gmail.com</a></h5>
                 </div>
+            </div>
+            <div class="row">
+                <footer class="footer"><i class="far fa-copyright"></i> 2020 Nishita Acharya</footer>
             </div>
         </section>
     </section>
