--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
                                 <h3 class="title">Patatap Clone</h3>
                                 <div class="img-text">
                                     <!-- <h2>Project three</h2> -->
-                                    <p>This project is a browser sound player which is a clone of Patatap website. Hit any key, A to Z, and a sound plays with an animation.<br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS, JavaScript
-                                        (Paper.js, Howler.js)</p>
+                                    <p>This project is a browser sound player which is a clone of Patatap website. Hit any key, A to Z, to play a sound with an animation.<br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS, Paper.js,
+                                        Howler.js. *Caution: Demo may contain flashing lights*</p>
                                     <a id="btn-xs" class="btn btn-outline-primary" href="https://nishitaaa.github.io/patatap-clone/" target="_blank">Demo</a>
                                     <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/patatap-clone" target="_blank">Github</a>
 
@@ -350,7 +350,7 @@
                                 <h3 class="title">To-do List</h3>
                                 <div class="img-text">
                                     <!-- <h2>Project three</h2> -->
-                                    <p>A simple to-do list application. A user can add, delete and check/uncheck an item.<br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS, jQuery.</p>
+                                    <p>A simple to-do list application. A user can add, delete and check/uncheck an item.<br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS and jQuery.</p>
                                     <a id="btn-xs" class="btn btn-outline-primary" href="https://nishitaaa.github.io/todo-list/" target="_blank">Demo</a>
                                     <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/todo-list" target="_blank">Github</a>
                                 </div>
@@ -364,10 +364,10 @@
                                 <img src="stylesheets/art1.jpg" alt="">
                                 <h3 class="title">Art Gallery</h3>
                                 <div class="img-text">
-                                    <h2>Project one</h2>
-                                    <p>A simple to-do list application. A user can add, delete and check/uncheck an item.<br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS, jQuery.</p>
+                                    <!-- <h2>Project one</h2> -->
+                                    <p>A virtual art gallery website with a dummy shopping cart checkout. User can learn about famous art works, artists, and museums. <br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS and PHP</p>
                                     <a id="btn-xs" class="btn btn-outline-primary" href="https://www.cs.ryerson.ca/~pnkapadi/cps630/assign2/a2.html" target="_blank">Demo</a>
-                                    <a id="btn-xs" class="btn btn-outline-light" href="#projects" target="_blank">Github</a>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/ArtGallery" target="_blank">Github</a>
 
                                 </div>
                             </div>
@@ -378,8 +378,8 @@
                                 <h3 class="title">Angular Basics</h3>
                                 <div class="img-text">
                                     <!-- <h2>Project Two</h2> -->
-                                    <p> A prototype with a given list of features using Angular v.9. User can see current time and date and real-time weather once authenicated. <br><strong style="text-decoration: underline;">Created with:</strong> Angular,
-                                        Firebase, Travis CI, Javascript, and more.</p>
+                                    <p> A prototype website using Angular v.9. User can see current time and date and real-time weather once authenicated with an account. <br><strong style="text-decoration: underline;">Created with:</strong> Angular, Firebase,
+                                        Travis CI, Javascript, and more.</p>
                                     <a id="btn-xs" class="btn btn-outline-primary" href="https://cps847-finalproject.firebaseapp.com/" target="_blank">Demo</a>
                                     <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/CPS847-GroupProject" target="_blank">Github</a>
 
@@ -391,8 +391,10 @@
                                 <img src="stylesheets/connections1.jpg" alt="">
                                 <h3 class="title">Content Delivery Network</h3>
                                 <div class="img-text">
-                                    <h2>Project three</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, molestiae? Id rerum, iusto explicabo voluptate maiores incidunt ipsum saepe praesentium libero! Doloribus inventore optio .</p>
+                                    <!-- <h2>Project three</h2> -->
+                                    <p>In a group of 3, created a dummy content delivery network.<br><strong style="text-decoration: underline;">Created with:</strong> Java</p>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="#projects" target="_blank">Github</a>
+
                                 </div>
                             </div>
                         </div>
@@ -402,8 +404,8 @@
                                 <img src="stylesheets/code2.jpeg" alt="">
                                 <h3 class="title">WICS Web Developer</h3>
                                 <div class="img-text">
-                                    <h2>Project three</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, molestiae? Id rerum, iusto explicabo voluptate maiores incidunt ipsum saepe praesentium libero! Doloribus inventore optio .</p>
+                                    <!-- <h2>Project three</h2> -->
+                                    <p> Took the role of Web Developer for Ryerson's Women In Computer Science group. Modified and maintained the website during the terms of Fall 2019 and Winter 2020.</p>
                                     <a id="btn-xs" class="btn btn-outline-primary" href="http://wics.scs.ryerson.ca/" target="_blank">Demo</a>
 
                                 </div>
@@ -439,9 +441,9 @@
                         acharyanishita@gmail.com</a></h5>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <footer class="footer"><i class="far fa-copyright"></i> 2020 Nishita Acharya</footer>
-            </div>
+            </div> -->
         </section>
     </section>
 
