reverting to before trying to fix home fading

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
             <div id="particles-js">
                 <div class="containerintro">
-                    <h1 class=" welcome ">Hi! I am Nishita Acharya.</h1>
+                    <h1 class=" welcome ">Welcome! I am Nishita Acharya.</h1>
                     <h1 class="mytitle ">I am a Web Developer</h1>
                 </div>
 
