style nav hover, add brand logo, about me, remaining proj links

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
                 </div>
             </div>
+            <div id="brand" class="mr-2 mt-2 d-none d-md-block d-sm-none d-xs-done">Nishita A. <i class="fas fa-laptop-code"></i></div>
             <div id="particles-js">
                 <div class="containerintro">
                     <h1 class=" welcome ">Welcome! I am Nishita Acharya.</h1>
@@ -179,10 +180,12 @@
                 <div class="col-md-4 col-sm-6 col-xs-12 " data-aos="fade">
                     <!-- <div class="col-md-4 col-xs-0 d-none d-md-block d-lg-block"> -->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloremque neque quia optio quas repellat ut illo iusto. Excepturi minus ea placeat deleniti libero nihil consequatur, vitae expedita totam ab! Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Nulla corrupti recusandae cupiditate, omnis rem fugiat? Exercitationem inventore, consectetur quaerat corrupti porro, est esse rem, recusandae earum hic autem cum eligendi! Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Amet nam ut fuga voluptatibus animi!
+                        My name is Nishita Acharya and I am an aspiring full stack developer. I completed my Bachelor's degree in Computer Science at Ryerson University. </p>
+                    <p>I enjoy challenging myself to complex problems and turning them into simple, useful designs. I am continuously seeking opportunities to learn new technologies and broaden my knowledge. My attention to detail, problem-solving nature,
+                        and strong work ethic have created a passion in me that makes each day exciting. I would like to create products that add value to others and making a meaningful impact.
                     </p>
+                    <button id="resume" class="btn btn-outline-primary">Resume</button>
+
                 </div>
                 <div class="col-md-4 col-sm-0 col-xs-0 d-none d-md-block d-lg-block">
                     <!-- <div class="col-md-4 col-sm-6 d-none d-sm-block d-md-block d-lg-block"> -->
@@ -192,8 +195,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6 col-xs-12 ">
-                    <h2 class="text-center" style="font-family: 'Montserrat', sans-serif;
-                    ">My Skills</h2>
+                    <h2 class="text-center" style="font-family: 'Montserrat', sans-serif;">My Skills</h2>
                     <div class="skillscontainer">
                         <!-- First bar -->
                         <div class="bar" data-percentage="95%">
@@ -274,7 +276,6 @@
                                 <div class="progress-content"></div>
                             </div>
                         </div>
-                        <button id="resume" class="btn btn-info float-right">Resume</button>
 
 
                     </div>
@@ -391,12 +392,11 @@
                                 <div class="img-text">
                                     <!-- <h2>Project three</h2> -->
                                     <p>In a group of 3, created a dummy content delivery network.<br><strong style="text-decoration: underline;">Created with:</strong> Java</p>
-                                    <a id="btn-xs" class="btn btn-outline-light" href="#projects" target="_blank">Github</a>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/CPS706FinalProject" target="_blank">Github</a>
 
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mb-3">
                             <div class="single-content" data-category="others">
                                 <img src="stylesheets/code2.jpeg" alt="">
