testing nav resizing

--- a/index.html
+++ b/index.html
@@ -139,11 +139,10 @@
               </button>
 
                 <div id="demo" class="">
-                    <button class="btn btn-default btn-xs"><a class="navigationlinks" href="#home" style="text-decoration: none;"> HOME </a></button>
-                    <button class="btn btn-default btn-xs"><a class="navigationlinks" href="#about" style="text-decoration: none;"> ABOUT </a></button>
-                    <button class="btn btn-default btn-xs"><a class="navigationlinks" href="#projects" style="text-decoration: none;"> PROJECTS </a></button>
-                    <button class="btn btn-default btn-xs"><a class="navigationlinks" href="#contact" style="text-decoration: none;"> CONTACT </a></button>
-
+                    <button class="btn btn-default btn-xs" style="padding: 6px 6px;"><a class="navigationlinks" href="#home" style="text-decoration: none;"> HOME </a></button>
+                    <button class="btn btn-default btn-xs" style="padding: 6px 6px;"><a class="navigationlinks" href="#about" style="text-decoration: none;"> ABOUT </a></button>
+                    <button class="btn btn-default btn-xs" style="padding: 6px 6px;"><a class="navigationlinks" href="#projects" style="text-decoration: none;"> PROJECTS </a></button>
+                    <button class="btn btn-default btn-xs" style="padding: 6px 6px;"><a class="navigationlinks" href="#contact" style="text-decoration: none;"> CONTACT </a></button>
                 </div>
             </div>
             <div id="brand" class="mr-2 mt-2 d-none d-md-block d-sm-none d-xs-done">Nishita A. <i class="fas fa-laptop-code"></i></div>
